Ticket: #FT-55 SubTicket: #FT-216 Component: Changes: 1. fix setting icon not showing correctly

--- a/TripfinderWeb/TripfinderWeb/Global/Css/navigation-menu.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/navigation-menu.less
@@ -371,6 +371,7 @@
 				background-image: url("../img/navigation-menu/icon-Log Out.svg");
 			}
 
+			&.setting,
 			&.settings {
 				background-image: url("../img/navigation-menu/icon-Settings.svg");
 			}
